--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -27,6 +27,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.autor{
+  font-family: NotoSansRegular;
+  font-size: 16px;
+  color: #181C31;
+}
+
 .pading-sections{
     padding-top: 100px;
     padding-bottom: 40px;
@@ -328,4 +334,26 @@ a:hover {
 
 .btn-audio:hover {
   background-color: #3e8e41;
+}
+
+
+/* Styles CSS Grid */
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 10px;
+  height: 300px;
+  width: 50%;
+  margin-left: 25%;
+  font-weight: bolder;
+}
+.item {
+  background-color: #868ff3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  color: white;
 }
